deployment/app-pedidos-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-pedidos-svc
spec:
  type: NodePort
  selector:
    app: pedeai-pedidos
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
