deployment/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  type: NodePort
  selector:
    app: pedeai
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
